CrOS shelf: don't restrict work area further when keyboard is shown

Currently, when the virtual keyboard is shown, the work area is
restricted by the size of the keyboard, but also by the size of the
shelf. This is unnecessary because the keyboard hides the shelf
(regardless of the shelf position). Restricting the work area
further by the size of the shelf therefore creates an unnecessary
gap between open windows and the virtual keyboard.

Bug: 900869
Change-Id: I3af4d34b3f4f6c3b9da5c399f09d736d96492dd5
Reviewed-on: https://chromium-review.googlesource.com/c/1379955
Commit-Queue: Manu Cornet <manucornet@chromium.org>
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Cr-Commit-Position: refs/heads/master@{#617151}
Former-commit-id: ba496217cdb56b7c9e49504b47638bafe983b197