ash/shelf/shelf_layout_manager.h
@@ -286,6 +286,9 @@ class ASH_EXPORT ShelfLayoutManager
                               bool animate,
                               ui::ImplicitAnimationObserver* observer);
 
+  // Returns whether the virtual keyboard is currently being shown.
+  bool IsKeyboardShown() const;
+
   // Stops any animations and progresses them to the end.
   void StopAnimating();
 
