ash/wm/pip/pip_positioner_unittest.cc
@@ -8,7 +8,6 @@
 #include <string>
 #include <vector>
 
-#include "ash/shelf/shelf_constants.h"
 #include "ash/shell.h"
 #include "ash/system/unified/unified_system_tray.h"
 #include "ash/test/ash_test_base.h"
@@ -115,7 +114,7 @@ TEST_F(PipPositionerTest, PipMovementAreaIncludesKeyboardIfKeyboardIsShown) {
   ASSERT_TRUE(keyboard::WaitUntilShown());
 
   gfx::Rect area = PipPositioner::GetMovementArea(window_state()->GetDisplay());
-  EXPECT_EQ(gfx::Rect(8, 8, 384, 284 - ShelfConstants::shelf_size()), area);
+  EXPECT_EQ(gfx::Rect(8, 8, 384, 284), area);
 }
 
 TEST_F(PipPositionerTest, PipRestingPositionSnapsToClosestEdge) {
